# src/swagger.yaml
@@ -171,7 +171,7 @@ paths:
           description: Feedback not found
         "500":
           description: Internal server error
-  /auth/login:
+  /user/login:
     post:
       summary: User login
       tags:
@@ -185,10 +185,10 @@ paths:
               properties:
                 username:
                   type: string
-                  example: admin@example.com
+                  example: admin
                 password:
                   type: string
-                  example: 123456
+                  example: 12345
               required:
                 - username
                 - password
@@ -200,16 +200,12 @@ paths:
               schema:
                 type: object
                 properties:
-                  accessToken:
-                    type: string
-                  refreshToken:
-                    type: string
                   user:
                     type: object
                     properties:
-                      id:
+                      _id:
                         type: string
-                      name:
+                      username:
                         type: string
                       email:
                         type: string
@@ -255,6 +251,42 @@ paths:
                   message:
                     type: string
                     example: Internal server error
+  /user/list-user:
+    get:
+      summary: Get all users (admin)
+      tags:
+        - User
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+        - in: query
+          name: limit
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: List users
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  users:
+                    type: array
+                    items:
+                      type: object
+                  total:
+                    type: integer
+                  page:
+                    type: integer
+                  limit:
+                    type: integer
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal server error
   /user/logout:
     post:
       summary: User logout
@@ -359,7 +391,11 @@ paths:
               schema:
                 type: object
                 properties:
-                  newRefreshToken:
+                  message:
+                    type: string
+                  accessToken:
+                    type: string
+                  refreshToken:
                     type: string
         "403":
           description: Forbidden
